# LBD

./: CMakeLists.txt  CommonDefinitions.hpp  IApplication.hpp  OverallHelper.hpp  main.cpp
ExampleProject/: CMakeLists.txt  Example.cpp  Example.hpp
OOPProject/: CAdmin.hpp  CAudioBook.hpp  CBook.cpp  CBook.hpp  CEbook.hpp  CLibrary.hpp  CMakeLists.txt  CUser.hpp  IBookAdmin.hpp  IBookUser.hpp  IMedia.hpp  OOP.cpp  OOP.hpp
